@@ -268,17 +268,17 @@ tiberium-radius=Distance from nodes that Tiberium can be placed. Save game must 
 tiberium-growth=Scales the amount of Tiberium ore that can grow on a tile. Save game must be reloaded after changing.\nDefault: 10
 tiberium-blue-saturation-point=What percent of Green Tiberium transformed to Blue Tiberium is considered fully saturated.\nDefault: 50%
 tiberium-blue-saturation-slowdown=How fast Green Tiberium should be transformed to Blue Tiberium after the planet is fully saturated with Blue Tiberium.\nDefault: 10%
-debug-text=Activates various debugging measures.\nDefault: disabled
+tiberium-debug-text=Activates useful and annoying debugging messages both in-game and as part of the startup process. Logs additional information to factorio-current.log file for troubleshooting.\nDefault: disabled
 # __1__ is replaced with a centrifuging noun phrase from [technology-name]
-tiberium-centrifuge-override=Advanced setting: replace the automatically generated __1__ recipe output with something you feel is more appropriate for your mod combination.\nEnter a delimited string of the items/fluids and amounts that should come from the recipe in the exact format "item1-internal-name:item1-amount,item2-internal-name:item2-amount" (with no quotation marks).\nYou can find items' internal names by loading into a game, pressing F4 to open debug settings, enabling "show-debug-info-in-tooltips", and then mousing over the desired item and noting the "item-name" field. For fluids, mouse over them in FNEI or the un-barreling recipes.\nDefault: leave blank to use the automatically generated __1__ Centrifuging recipe output
+tiberium-centrifuge-override=Advanced setting: replace the automatically generated __1__ recipe output with something you feel is more appropriate for your mod combination.\nEnter a delimited string of the items/fluids and amounts that should come from the recipe in the exact format "item1-internal-name:item1-amount,item2-internal-name:item2-amount" e.g. iron-ore:13,stone:3\nYou can find items' internal names by loading into a game, pressing F4 to open debug settings, enabling "show-debug-info-in-tooltips", and then mousing over the desired item and noting the "item-name" field. For fluids, mouse over them in FNEI or the un-barreling recipes.\nDefault: leave blank to use the automatically generated __1__ Centrifuging recipe output
 tiberium-value=Scales how much raw material you get from a single piece of Tiberium ore. Higher values make the game easier.\nDefault: 10
 tiberium-wont-damage-biters=Prevents biters from dying to Tiberium fields.  Does not affect damage dealt with Tiberium weapons.\nDefault: enabled
 tiberium-spread=Controls how rapidly Tiberium spreads.  Higher values will aggressively cover the landscape. Zero will give regenerating fields that don't expand infinitely.\nDefault: 30
 tiberium-starting-area=This will include Tiberium as one of your starting ore patches.\nYes, it will spread and eat the other starting ore patches.\nYes, that will make the game significantly more difficult.\nYou can expect no mercy and only pain, you've been warned.\nDefault: disabled
 tiberium-tier-zero=This setting adds an additional tier of centrifuging that you can access before unlocking fluid recipes or electricity. Useful for Tiberium only playthroughs with other mods that extend the early game.\nDefault: disabled
-tiberium-advanced-start=Start with some basic tiberium refining equipment, so that you can do a tiberium only run. \nDefault: disabled
-tiberium-ore-removal=Enables the Tiberium Ore in Start setting, and the Tiberium Advanced Start setting. \nDefault: disabled
-tiberium-item-damage-scale=If enabled, scales the damage from tiberium in your inventory to the number of stacks you have. You will die immediately if you have too many. \nDefault: disabled
+tiberium-advanced-start=Start with some basic Tiberium refining equipment, so that you can do a Tiberium only run.\nDefault: disabled
+tiberium-ore-removal=For use with the "Tiberium Only" map gen preset. Enables the Tiberium Ore in Start setting and the Tiberium Advanced Start setting.\nDefault: disabled
+tiberium-item-damage-scale=Scales the damage from carrying Tiberium in your inventory based on the number of stacks you have. Be careful about mining chests full of Tiberium!\nDefault: disabled
 tiberium-auto-scale-performance=Reduce late-game Tiberium growth granularity to avoid potential UPS loss.\nDefault: disabled
 
 [map-gen-preset-name]
